# movie-player

./: README.md
movie/: pyproject.toml  render.yaml
movie/src/: main.py
movie/src/movie/: __init__.py  movie_route.py  utils.py
movie/src/static/css/: style.css
movie/src/templates/: index.html  movie.html  movie_details.html
